Fixed wordwrap on discussion and shop page

--- a/static/css/discussion_page.css
+++ b/static/css/discussion_page.css
@@ -32,6 +32,8 @@ div.post{
     
     background-color: #ffe6b3;
     
+    word-wrap: break-word;
+    
     #text-align: center;
 }
 
